Merge Fixes